Support for obsoleteTagMinAllowedMajorMinor (AS0105) in Run-AlCops, Run-AlValidation and Run-AlPipeline
Use a PowerShell Job to run bcpt tests to be able to remove files afterwards
Allow Get-BcContainerAppInfo to be used without explicitely specifying -containerName $containerName, allowing just $containerName

3.0.8
Add new function Get-ALGoAuthContext to get AL-Go for GitHub compatible auth context from bcAuthContext obtained from New-BcAuthContext
Issue #2442 Run-AlPipeline generates BuildOutput.txt even if parameter is not specified
Add new parameter -appFilePath to Get-BcContainerAppInfo to get app info from an .app file shared with the container
When running preview version of BcContainerHelper, it will automatically select preview versions of generic images as well
Add warning when using Desktop OS and process isolation
Issue #2460 New-BcContainerWizard cannot select all countries with NAV 2018 after the introduction of nlbe and itch countries
Add parameter -doNotPublishApps to Run-AlPipeline to skip publishing apps, running tests etc. - causes usage of filesonly container
Fix issue that /ReportSuppressedDiagnostics is sometimes applied when the flag is not available.
Add debug output (memory, running services and eventlog) when Invoke-ScriptInBcContainer is failing
Re-throw Out Of Memory exception if container is out of memory when using Invoke-ScriptInBcContainer
Issue #2455 Use Invoke-WebRequest when downloading from a direct download URL from SharePoint / OneDrive

3.0.7
Add --no-cache when building docker images to avoid reuse of faulty layers
New parameter IncludeSourceInPackageFile on Get-BcContainerAppRuntimePackage

3.0.6
Fix issue with wrong extension of BuildOutputFile

3.0.5
Issue #2381 Run-AlValidation -nextmajor fails if nextmajor is not available (should be ignored)
Issue #2379 Better error message from Publish-PerTenantExtensionApps
Issue #2378 give warnings instead of failing on self-signed certificates when running as non-admins