@@ -134,7 +134,8 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Start-BcContainerAppDataUpgrade', 'Stop-BcContainer', 
                'Sync-BcContainerApp', 'Test-BcContainer', 'UnInstall-BcContainerApp', 
                'UnPublish-BcContainerApp', 'Wait-BcContainerReady', 
-               'Write-BcContainerHelperWelcomeText'
+               'Write-BcContainerHelperWelcomeText', 
+               'Set-BcContainerServerConfiguration', 'Restart-BcContainerServiceTier',
 
 # Cmdlets to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no cmdlets to export.
 CmdletsToExport = @()
